Polished update site html

--- a/com.cloudbees.eclipse.updatesite-feature/index.html
+++ b/com.cloudbees.eclipse.updatesite-feature/index.html
@@ -4,16 +4,24 @@
 
 <h2>Installation instructions</h2>
 
-<p>Use http://eclipse.cloudbees.com as an update site url in eclipse to install the toolkit</p>
+<p>Use <a href="http://eclipse.cloudbees.com">http://eclipse.cloudbees.com</a> update site url in eclipse to install the toolkit.</p>
 <p>
-<b>Prerequisites:</b><br/>
+
+<h3>Prerequisites</h3>
+
+<p>Eclipse 3.6 or 3.7</p>
+
+<p><b>To use Forge SVN and GIT Integration (optional plugins):</b><br/></p>
+
 <ul>
-<li>Eclipse 3.6 or newer
-<li>Subclipse (optional, forge SVN repository support)
-<li>Subversive (optional, forge SVN repository support). <b>NOTE!</b> Please make sure that subversive has a connector installed. If not then before installing add <a href="http://community.polarion.com/projects/subversive/download/eclipse/2.0/helios-site/">http://community.polarion.com/projects/subversive/download/eclipse/2.0/helios-site/</a> update site to your Eclipse installation.
-<li>eGit (optional, forge GIT repository support)
+<li><b>Subclipse</b> (at least one Subclipse connector must be available)
+<li><b>Subversive</b> (at least one Subversive connector  must be available, use <a href="http://community.polarion.com/projects/subversive/download/eclipse/2.0/helios-site/">http://community.polarion.com/projects/subversive/download/eclipse/2.0/helios-site/</a> as update site to install)
+<li><b>eGit</b>
 </ul>
 </p>
+
+<p><b>Make sure that the plugin itself is installed and configured before installing the Toolkit!! (Subclipse, Subversive or eGIT)</b></p>
+<p><b>Do not install Subclipse and Subversive integration at the same installation.</b></p>
 
 <p><i>Last update: 2011-06-08</i></p>
 </body>
